...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomePage">

    <RelativeLayout
        android:id="@+id/CommunityText"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

...
            android:textColor="#303032"
            android:text="A place for all your questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/DM"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/dmlogo"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"/>
...
