...
                android:id="@+id/FollowerList"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/ChatPerson1"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ProfilePic1"
                        android:src="@drawable/chatprofilepic7"
                        android:layout_width="50dp"
                        android:layout_height="50dp"/>

                    <Button
                        android:id="@+id/ChatUsername"
                        android:text="Alfredo Lipshutz"
                        android:layout_toRightOf="@id/ProfilePic1"
                        android:textAllCaps="false"
                        android:background="@null"
                        android:textSize="18sp"
                        android:layout_marginLeft="15dp"
...
