...
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/SearchUsername"
                    android:text="Henry Benjamin"
                    android:textAllCaps="false"
                    android:background="@null"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

...
